# nba_playoffs_prescriptive_analytics

./: .gitignore  CLAUDE.md  DEPLOY.md  Instructions.txt  README.md  pyproject.toml  railway.json  railway_start.sh  requirements.txt
.claude/: settings.local.json
api/: dependencies.py  main.py  schemas.py
api/routes/: predict.py
nba_ml/: config.py
nba_ml/db/: base.py  models.py
nba_ml/features/: builders.py  matchup.py  pipeline.py  player.py  player_vs_team.py
nba_ml/inference/: loader.py  player_predict.py  service.py
nba_ml/ingest/: balldontlie_client.py  load_games.py  nba_api_client.py
nba_ml/training/: train.py  train_player.py
scripts/: analyze_features.py  analyze_player_features.py  archive_odds.py  archive_player_props.py  daily_cron.py  daily_refresh.ps1  diagnose_bracket.py  migrate.py  predict_playoffs.py  run_etl.py  train_player_models.py  train_vegas.py
seed/models/: ensemble_v1.joblib  logreg_v1.joblib  logreg_vegas_v1.joblib  metrics.json  metrics_vegas.json  player_ast_linear_v1.joblib  player_ast_xgb_v1.joblib  player_blk_linear_v1.joblib  player_blk_rf_v1.joblib  player_blk_xgb_v1.joblib  player_pts_linear_v1.joblib  player_pts_xgb_v1.joblib  player_reb_linear_v1.joblib  player_reb_xgb_v1.joblib  player_stl_linear_v1.joblib  player_stl_xgb_v1.joblib  player_tov_linear_v1.joblib  player_tov_xgb_v1.joblib  rf_vegas_v1.joblib  stack_v1.joblib  stack_vegas_v1.joblib  vegas_ensemble_v1.joblib  xgb_v1.joblib  (+1 more)
tests/: conftest.py  test_etl_idempotency.py  test_features.py  test_injury_exclusion.py
webapp/: app.py  data.py
(+4 files in other folders)
